@@ -919,23 +919,6 @@ Description: GNU C Library: Shared libraries (EV67 optimized)
  needs to be installed on Alpha EV67/68 and EV7 machines. If you install
  this on an older machine, it won't even be used.
 
-Package: libc6-loongson2f
-Architecture: mipsel
-Section: libs
-Priority: extra
-Multi-Arch: same
-Pre-Depends: libc6 (= ${binary:Version})
-Depends: ${misc:Depends}
-Build-Profiles: <!stage1>
-Description: GNU C Library: Shared libraries (Loongson 2F optimized)
- Contains the standard libraries that are used by nearly all programs on
- the system. This package includes shared versions of the standard C
- library and the standard math library, as well as many others.
- .
- This set of libraries is optimized for the Loongson 2F. It only
- needs to be installed on Lemote Loongson 2F machines. If you install
- this on a non-Loongson, it won't even be used.
-
 Package: libnss-dns-udeb
 XC-Package-Type: udeb
 Architecture: any
