@@ -15,7 +15,9 @@ glibc (2.21-0experimental2) UNRELEASED; urgency=medium
   [ Aurelien Jarno ]
   * rules.d/debhelper.mk: replace GLIBC_VERSION before LIBC.  Closes:
     #797538.
-  
+  * Drop loongson-2f flavour on mipsel as this machine is not supported
+    anymore (default to R2 ISA).
+
   [ Helmut Grohne ]
   * Fix some issues with stage 1.  Closes: #797831.
 
